<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.is24.spring</groupId>
  <artifactId>base64-url-decoder</artifactId>
  <version>1.1-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>Spring Base64 Url Decoder</name>

  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>
  
  <organization>
    <name>Immobilien Scout GmbH</name>
    <url>http://www.immobilienscout24.de</url>
  </organization>
  <developers>
    <developer>
      <id>jrummler</id>
      <name>Jens Rummler</name>
      <url>https://github.com/jrummler</url>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:https://github.com/ImmobilienScout24/spring-base64-url-decoder.git</connection>
    <url>scm:git:https://github.com/ImmobilienScout24/spring-base64-url-decoder.git</url>
    <developerConnection>scm:git:https://github.com/ImmobilienScout24/spring-base64-url-decoder.git</developerConnection>
    <tag>HEAD</tag>
  </scm>
  <ciManagement>
    <system>travis</system>
    <url>https://travis-ci.org/ImmobilienScout24/spring-base64-url-decoder</url>
  </ciManagement>

  <description>This annotation delivers a annotation and adds a HandlerMethodArgumentResolver to the Spring MVC framework.</description>
  <url>https://github.com/ImmobilienScout24/spring-base64-url-decoder</url>
  <licenses>
    <license>
      <name>MIT License</name>
      <url>http://www.opensource.org/licenses/mit-license.php</url>
    </license>
  </licenses>

  <properties>
    <spring.version>4.0.5.RELEASE</spring.version>
  </properties>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.4.1</version>
      </plugin>
    </plugins>
  </build>
  
  <dependencies>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-web</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.3</version>
    </dependency>
   <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>javax.servlet-api</artifactId>
      <version>3.1.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-webmvc</artifactId>
      <version>${spring.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <version>${spring.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>


</project>